--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <img class = "profpic" src="images/profpic.jpeg" alt = "Picture of Khadijat Kokumo smiling outside">
             <h1 id = "name" >Khadijat Kokumo</h1>
             <h2 id = "collegeinfo">Biomedical Engineering <br> Computer Science <br> <em>Northwestern University </em></h2>
-            <a title = "Home" href="portfolio.html#home" class="homenav">Home</a>
+            <a title = "Home" href="index.html#home" class="homenav">Home</a>
             <a title = "Khadijat's Biography" href="biography.html">Biography</a>
-            <a title = "Khadijat's Projects" href="portfolio.html#projects" class="projectsnav">Projects</a>
+            <a title = "Khadijat's Projects" href="index.html#projects" class="projectsnav">Projects</a>
             <p id="resem"> <a href="portfolioresume.pdf" target="_blank"> Resume</a> <a title="Email Khadijat Kokumo" href="mailto:khadijatkokumo2024[at]u[dot]northwestern[dot]edu">Email</a></p>
             <p id = "linkedin" ><span class="material-symbols-outlined">school</span> <br><a href="https://www.linkedin.com/in/khadijatkokumo/" target="_blank"> LinkedIn </a></p>
 
