--- a/biography.html
+++ b/biography.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
     <head>
         <title>Khadijat Biography</title>
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
